# linebot-ap2

./: .gitignore  DEMO_TESTING_GUIDE.md  README.md  demo_ap2_features.py  main.py  pyproject.toml  requirements.txt  test_mandate_fix.py  test_service_sharing.py
ap2_agents/: payment_processor.py  shopping_agent.py
docs/plans/: 2026-01-30-ap2-phase1-mandates.md  2026-01-30-credential-provider.md
scripts/: demo_purchase_flow.py
src/linebot_ap2/: __init__.py
src/linebot_ap2/agents/: __init__.py  enhanced_payment_agent.py  enhanced_shopping_agent.py
src/linebot_ap2/common/: __init__.py  intent_detector.py  logger.py  retry_handler.py  session_manager.py
src/linebot_ap2/config/: __init__.py  settings.py
src/linebot_ap2/models/: __init__.py  agent.py  payment.py  product.py
src/linebot_ap2/services/: __init__.py  credential_provider.py  mandate_service.py  payment_service.py  product_service.py
src/linebot_ap2/tools/: __init__.py  payment_tools.py  shopping_tools.py
tests/: test_ap2_mandates.py  test_credential_provider.py
